# FIM_Service

./: README.md  dev.http  dump.rdb  hashes  usernames
fim_netcoms/fim_server-external/: client.js  netcoms.js  package-lock.json  package.json  server.js
fim_netcoms/fim_server-external/server/: Cargo.toml
fim_netcoms/fim_server-external/server/src/: main.rs
fim_netcoms/fim_server-mobile/: client.js  package-lock.json  package.json  server.js  test.js
