[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = {version = "1.5.0", features = ["full"] }
warp = "0.3"
redis = {version = "0.20.1", features = ["tokio-comp"]}